// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Editor toolbar button component MaximizeButton renders 1`] = `
<Blueprint3.Button
  className="bp3-small"
  icon="maximize"
  onClick={[Function]}
/>
`;

exports[`Editor toolbar button component RemoveButton renders 1`] = `
<Blueprint3.Button
  className="bp3-small"
  icon="cross"
  onClick={[Function]}
/>
`;
